Set Timer and auto save on tine up

--- a/DemoMVC.WebUi/Views/UserExam/Index.cshtml
+++ b/DemoMVC.WebUi/Views/UserExam/Index.cshtml
@@ -37,13 +37,15 @@
                 if (role == "sadmin")
                 {
                     columns.Bound(c => c.UserExamId)
-                    .HeaderHtmlAttributes(new { @class = "center_text" })
-                    .HtmlAttributes(new { @class = "kendogrid_Action center_text" })
-                    .ClientTemplate("<div class='k_action_table'>" +
-                    (AllowedDelete ? "<a href='javascript:void(0);' title='Delete' onclick='confirmDelete(#=UserExamId#)'><i class='fa fa-trash'></i></a> " : "") +
-                    (AllowedEdit ? "<a href='javascript:void(0);' title='View Details' onclick=\"fnShowDetails(#=UserExamId#)\"><i class='fa fa-eye'></i></a>" : "") +
-                    "<a href='javascript:void(0);' title='Generate Link'  onclick=\"showUrl(#=UserExamId#)\"><i class='fa fa-link'></i></a>" +
-                    "</div>")
+    .HeaderHtmlAttributes(new { @class = "center_text" })
+    .HtmlAttributes(new { @class = "kendogrid_Action center_text" })
+    .ClientTemplate("<div class='k_action_table'>" +
+        (AllowedDelete ? "<a href='javascript:void(0);' title='Delete' onclick='confirmDelete(#=UserExamId#)'><i class='fa fa-trash'></i></a> " : "") +
+        (AllowedEdit ? "<a href='javascript:void(0);' title='View Details' onclick=\"fnShowDetails(#=UserExamId#)\"><i class='fa fa-eye'></i></a>" : "") +
+        "<a href='javascript:void(0);' title='Generate Link' onclick=\"showUrl(#=UserExamId#)\"><i class='fa fa-link'></i></a> " +
+        "<a href='javascript:void(0);' title='Check Exam' onclick=\"checkExam(#=UserExamId#)\"><i class='fa fa-check-circle'></i></a>" +
+    "</div>")
+
                     .Filterable(false)
                     .Title("Action")
                     .Width("7%")
@@ -121,6 +123,10 @@
         });
     }
 
+    function checkExam(userExamId) {
+        // Redirect to the exam checking page
+        window.location.href = '/UserExamCheck/CheckExam?userExamId=' + userExamId;
+    }
 
 </script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
